--- a/work_experience.html
+++ b/work_experience.html
@@ -1,55 +1,82 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
-            img {
-                display: block;
-                margin-left: auto;
-                margin-right: auto;
-            }
-
-            * {
-                box-sizing: border-box;
-            }
-
-            .column {
-                float: left;
-                width: 33.33%;
-                padding: 5px;
-            }
-
-            .row: :after{
-                content: "";
-                clear: both;
-                display: table;
-            }
-        </style>
         <title>CE Work Experience</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+        <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
     </head>
     <body>
-        <div id= "work experience 2">
-            <img src ="img/work_experience2.png" alt= "work experience2" style ="width:50%">
-            <style>
-                img {
-                    display: block;
-                    margin-left: auto;
-                    margin-right: auto;
-                }
-            </style>
-        </div>
-        <div>
-            <img src ="img/work_portfolio.png" alt="portfolio" style="width:70%">
-            <img src ="img/skills.png" alt="skills" style="width:70%"></div>
-            <div class="row">
-                <div class="column">
-                    <a href= "hire_me.html"><img src="img/hire_me.png" alt= "hire_me" style="width:50%"></a>
+        <div class="wrapper">
+                <div class="side_bar">
+                    <div class="side_bar_top">
+                        <div class="profile_info">
+                            <h3>Catherine Earl</h3>
+                            <p>catherineearl8@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="side_bar_bottom">
+                        <ul>
+                            <li>
+                            <span class="top_curve"></span>
+                                <a href="index.html">
+                                    <span class="icon"><i class="fas fa-home"></i></span>
+                                    <span class="item">DashBoard</span></a>
+                                    <span class="bottom_curve"></span>
+                            </li>
+                            <li>
+                            <span class ="top_curve"></span>
+                                <a href="projects.html">
+                                    <span class="item">Projects</span></a>
+                                    <span class="bottom_curve"></span>
+                            </li>
+                            <li>
+                                <span class ="top_curve"></span>
+                                <a href="hire_me.html">
+                                    <span class="item">Hire Me</span></a>
+                                    <span class="bottom_curve"></span>
+                            </li>
+                            <li class ="active">
+                                <span class ="top_curve"></span>
+                                <a href="work_experience.html">
+                                    <span class="item">Work experience</span></a>
+                                <span class="bottom_curve"></span>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="column">
-                    <a href= "index.html"><img src="img/home_page.png" alt= "home_page" style="width:50%"></a>
-                </div>
-                <div class="column">
-                    <a href= "projects.html"><img src="img/projects.png" alt= "Projects" style="width:50%"></a>
+            <div class =".main_container">
+                <h2> Milton Avis Audit Senior Manager July 2022 – Current </h2>
+                <p> Lead audit team of two with a portfolio of clients with a turnover of up to £10 million.</p>
+                <p> Created and implemented a program of quality control measures to improve the firms overall audit standards.</p>
+                <p> Manage team’s workflow and create strategies to improve workflow efficiencies </p>
+                <p> Manage cross-functional team across audit, accounts and outsourcing functions.</p>
+                <p> Developed an ethics control framework for new audit assignments.</p>
+                <p> Developed a consistent control framework to ensure overall high audit standards across the firm and monitor these controls.</p>
+                <p> Mentor and develop junior members of staff providing achievable KPIs</p>
+                <p> Develop strategic recommendations on a internal control framework to improve company performance.</p>
+                <p> Managed a portfolio of clients registered with the FCA </p>
+                <p> Reviewed and analyzed internal control recommendations to improve efficiency and transparency.</p>
+                <p> Managed risk assessments and stress testing, with current themes and concerns involving the current macro environment</p>
+                <h2> Milton Avis Audit Manager December 2020 – June 2022 </h2>
+                <p> Lead audits and generated audit reports with recommendations.</p>
+                <p> Provided recommendations on risk control and corporate governance to multiple stakeholders.</p>
+                <p> Provided financial models and assisted in due diligence </p>
+                <p> Producing consolidated financial statements.</p>
+                <p> Fund accounting for portfolio of non for profit clients. </p>
+                <h2> Milton Avis Accountant March 2019 – December 2020</h2>
+                <p> Produced financial statements</p>
+                <h2> Freelance work, Accountant November 2018 – March 2019</h2>
+                <h2> MHA Macintyre Hudson Outsourcing Accountant July 2018 – October 2018 </h2>
+                <p> Produced cash flow forecast and budgets</p>
+                <p> Advised on strategic direction </p>
+                <p> Large data analysis and use of visualisation methods </p>
+                <h2> Micheal B Bennett, Accountant April 2017 – June 2018</h2>
+                <h2> Unrelated work, Career Break September 2011 – March 2017</h2>
+                <h2> Rupert King and Company, Trainee Accountant  September 2007 – September 2011 </h2>
                 </div>
             </div>
         </div>
+    </div>
+    <script src="script.js"></script>
     </body>
+</html>
