--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
             </div>
         <div class=".main_container">
-            <img src = "img/Catherine Earl!.png style="width:10%">
+            <img src = "img/Catherine Earl!.png" style="width:10%">
             <h2>About Me</h2>
             <p> With an MSC in Finance and Investment, Catherine is a Financial Auditor and Machine learning engineer with many years of experience servicing high profile clients with turnovers of £10m+.</p>
             <p> Her experience ranges from Audit matters to Tax and Corporate finance matters.</p>
